added text center

--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,8 @@
     background-color: #212529;
 }
 .text-white {
-    color: #fff!important;
+    color: #fff;
+}
+.text-center{
+    text-align: center;
 }
